--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 Chop the chicken into chunky 3cm pieces, add to the pan and fry for 5 mins before stirring through the spice paste and tomatoes, along with 250ml water. Bring to the boil, lower to a simmer and cook on a gentle heat uncovered for 25-30 mins or until rich and slightly reduced. Stir though the yogurt, coriander and ground almonds, season and serve with warm naan or fluffy basmati rice.</p>
             </div>
             <div class="imagebox" id="firstrecipeimage">
+                <span id="overlay">Click Here To Buy</span>
             </div>
         </div>
         <div class="contentbox" id="secondbox">
